--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <div class="kontakt">
         <ul class="kontakt-links">
             <li class="kontakt">
-              <a href="#" class="kontakt-link">Regulamin</a>
+              <a href="#" class="kontakt-link">Aktualności</a>
             </li>
             <li class="site-kontakt">
               <a href="#" class="kontakt-link">Nasze placówki</a>
